Complete index page

--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "gulp-clean-css": "^2.0.12",
     "gulp-file-include": "^0.13.7",
     "gulp-ftp": "^1.1.0",
+    "gulp-include": "^2.3.1",
     "gulp-notify": "^2.2.0",
     "gulp-sass": "*",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglifyjs": "^0.6.2"
+    "gulp-uglify": "^3.0.0",
+    "gulp-uglifyjs": "^0.6.2",
+    "pump": "^1.0.2"
   },
   "description": ""
 }
